--- a/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/Room/Components/AddSongToRoom.razor
+++ b/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/Room/Components/AddSongToRoom.razor
@@ -1,6 +1,7 @@
 ﻿@using PartyPlaylists.Models.DataModels
 @using PartyPlaylists.Services
 @inject RoomDataStore RoomDataStore
+@inject SpotifyService Spotify
 
 <EditForm Model="@song" OnValidSubmit="@AddSong">
     <label>Song Name</label>
@@ -17,6 +18,7 @@
 
     private async Task AddSong()
     {
+        song = await Spotify.GetSong(song.Name);
         await RoomDataStore.AddSongToRoomAsync(Room.Id.ToString(), song);
         Room = await RoomDataStore.GetItemAsync(Room.Id.ToString());
         await RoomChanged.InvokeAsync(Room);
