First attempt at spotify authentication

--- a/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/Index.razor
+++ b/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/Index.razor
@@ -28,6 +28,12 @@
 <br />
 <br />
 <button type="button" @onclick="JoinRoom">Join Room</button>
+<br />
+<br />
+<br />
+<SpotifyAuthentication />
+
+
 
 @code
 {
