Add service to add spotify auth code to room

--- a/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/Room/Room.razor
+++ b/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/Room/Room.razor
@@ -18,7 +18,7 @@
 <br />
 <br />
 <br />
-<SpotifyAuthentication />
+<SpotifyAuthentication Room="@room" />
 
 @code {
     [Parameter] public string roomId { get; set; }
