--- a/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/Room/Components/AddSongToRoom.razor
+++ b/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/Room/Components/AddSongToRoom.razor
@@ -1,5 +1,6 @@
 ﻿@using PartyPlaylists.Models.DataModels
 @using PartyPlaylists.Services
+@using SpotifyApi.NetCore
 @inject RoomDataStore RoomDataStore
 @inject SpotifyService Spotify
 
@@ -24,6 +25,7 @@
             await RoomDataStore.AddSongToRoomAsync(Room.Id.ToString(), song);
             Room = await RoomDataStore.GetItemAsync(Room.Id.ToString());
             await RoomChanged.InvokeAsync(Room);
+            await Spotify.GetUserId(Room.SpotifyAuthorization);
         }
     }
 }
