--- a/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/Room/Components/AddSongToRoom.razor
+++ b/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/Room/Components/AddSongToRoom.razor
@@ -25,7 +25,9 @@
             await RoomDataStore.AddSongToRoomAsync(Room.Id.ToString(), song);
             Room = await RoomDataStore.GetItemAsync(Room.Id.ToString());
             await RoomChanged.InvokeAsync(Room);
-            await Spotify.GetUserId(Room.SpotifyAuthorization);
+
+            Spotify.AuthToken = Room.SpotifyAuthorization;
+            await Spotify.GetUserId();
         }
     }
 }
