--- a/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/Room/Components/AddSongToRoom.razor
+++ b/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/Room/Components/AddSongToRoom.razor
@@ -19,23 +19,24 @@
 
     private Song song = new Song();
     private string roomOwnersSpotifyId = null;
+    private IPlaylist spotifyPlaylist;
 
     protected override async Task OnParametersSetAsync()
     {
         Spotify.AuthToken = Room?.SpotifyAuthorization;
         if (roomOwnersSpotifyId == null)
             roomOwnersSpotifyId = await Spotify.GetUserIdAsync();
+        if (spotifyPlaylist == null && Room != null)
+            spotifyPlaylist = await CreateSpotifyPlaylist();
+        
     }
 
     private async Task AddSong()
     {
-        IPlaylist spotifyPlaylist;
-        if (Room.RoomSongs.Count == 0)
-            spotifyPlaylist = await CreateSpotifyPlaylist();
-
         song = await Spotify.GetSong(song.Name);
         if (song != null)
         {
+            await Spotify.AddSongToPlaylist(spotifyPlaylist, song);
             await RoomDataStore.AddSongToRoomAsync(Room.Id.ToString(), song);
             Room = await RoomDataStore.GetItemAsync(Room.Id.ToString());
             await RoomChanged.InvokeAsync(Room);
