Move spotify tasks to the backing api. Blazor was taking too much control

--- a/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/Room/Components/SpotifyAuthentication.razor
+++ b/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/Room/Components/SpotifyAuthentication.razor
@@ -7,7 +7,7 @@
 @using Microsoft.Extensions.Configuration;
 @using PartyPlaylists.Services;
 
-@if (string.IsNullOrEmpty(Room?.SpotifyAuthorization))
+@if (string.IsNullOrEmpty(Room?.SpotifyPlaylist?.AuthCode))
 {
     <button @onclick="RedirectToSpotify">Authenticate Spotify</button>
 }
