--- a/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/Room/Room.razor
+++ b/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/Room/Room.razor
@@ -9,7 +9,7 @@
 @inject RefreshService RefreshService
 
 <h2>@room?.Name</h2>
-<h3>@room?.Owner</h3>
+<h4>Created by: @room?.Owner</h4>
 
 <SongList Room="@room" />
 <br />
