--- a/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/Room/Components/SongList.razor
+++ b/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/Room/Components/SongList.razor
@@ -1,8 +1,10 @@
 ﻿@using PartyPlaylists.Models.DataModels;
 @using PartyPlaylists.Services;
+@using Cloudcrate.AspNetCore.Blazor.Browser.Storage;
 
 @inject RoomDataStore RoomDataStore
 @inject RefreshService RefreshService
+@inject SessionStorage SessionStorage
 
 <table>
     @if (Room != null && Room.RoomSongs.ToList().Count > 0)
@@ -20,7 +22,7 @@
                 <td>@roomSong.Song.Artist</td>
                 <td>@roomSong.Song.Name</td>
                 <td>@roomSong.SongRating</td>
-                <td>Ahh</td>
+                <td>@roomSong.SongAddedBy</td>
                 <td><button type="button" class="active" @onclick="@(() => AddVote(roomSong))"><img src="https://i.imgur.com/H5cbDvG.png" /></button></td>
             </tr>
         }
@@ -32,8 +34,10 @@
 
     public async Task AddVote(RoomSong roomSong)
     {
-        await RoomDataStore.AddVoteToSong(Room.Id, roomSong.SongId, 1);
-        roomSong.SongRating += 1;
+        var userToken = await SessionStorage.GetItemAsync($"room{Room.Id}");
+        var room = await RoomDataStore.AddVoteToSong(userToken, Room.Id, roomSong.SongId, 1);
+        if (room != null)
+            roomSong.SongRating += 1;
         StateHasChanged();
     }
 }
