--- a/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/_Host.cshtml
+++ b/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/_Host.cshtml
@@ -11,6 +11,7 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
+    <link href="_content/Blazored.Typeahead/blazored-typeahead.css" rel="stylesheet" />
 </head>
 <body>
     <app>
@@ -19,5 +20,6 @@
 
     <script src="_framework/blazor.server.js"></script>
     <script src="_content/Cloudcrate.AspNetCore.Blazor.Browser.Storage/Storage.js"></script>
+    <script src="_content/Blazored.Typeahead/blazored-typeahead.js"></script>
 </body>
 </html>
