--- a/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/Room/Components/SongList.razor
+++ b/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/Room/Components/SongList.razor
@@ -6,15 +6,15 @@
 @inject RefreshService RefreshService
 @inject SessionStorage SessionStorage
 
-<table>
+<table class="table">
     @if (Room != null && Room.RoomSongs.ToList().Count > 0)
     {
         <tr>
-            <th>Artist</th>
-            <th>Title</th>
-            <th>Playlist Rating</th>
-            <th>Added By</th>
-            <th>Add Vote</th>
+            <th scope="col">Artist</th>
+            <th scope="col">Title</th>
+            <th scope="col">Playlist Rating</th>
+            <th scope="col">Added By</th>
+            <th scope="col">Add Vote</th>
         </tr>
         @foreach (var roomSong in Room.RoomSongs.OrderByDescending(s => s.SongRating))
         {
