--- a/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/Room/Room.razor
+++ b/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/Room/Room.razor
@@ -31,6 +31,7 @@
     <div class="row">
         <div class="col-md-4">
             <SpotifyAuthentication Room="@room" />
+            <SpotifyWebPlayer Room="@room" />
         </div>
     </div>
 </div>
